5.0.1
 * Prioritize built indexes in IndexStatusManager (CASSANDRA-19400)
 * Add java.base/java.lang.reflect among opens for jvm11-client.options (CASSANDRA-19780)


5.0-rc2


5.0-rc1
 * Move bcpkix-jdk18on to build dependencies, update to 1.78 and explicitly enumerate transitive dependencies (CASSANDRA-19739)
 * Avoid streams in the common case for UpdateTransaction creation (CASSANDRA-19675)
 * Only wait until native_transport_timeout for dispatcher to finish (CASSANDRA-19697)
 * Disable chronicle analytics (CASSANDRA-19656)
 * Replace Stream iteration with for-loop for StorageProxy::updateCoordinatorWriteLatencyTableMetric (CASSANDRA-19676)
 * Enforce metric naming contract if scope is used in a metric name (CASSANDRA-19619)
 * Avoid reading of the same IndexInfo from disk many times for a large partition (CASSANDRA-19557)
 * Resolve the oldest hints just from descriptors and current writer if available (CASSANDRA-19600)
 * Optionally fail writes when SAI refuses to index a term value exceeding configured term max size (CASSANDRA-19493)
 * Vector search can restrict on clustering keys when filtering isn't required (CASSANDRA-19544)
 * Fix FBUtilities' parsing of gcp cos_containerd kernel versions (CASSANDRA-18594)
 * Clean up KeyRangeIterator classes (CASSANDRA-19428)
 * Warn clients about possible consistency violations for filtering queries against multiple mutable columns (CASSANDRA-19489)
 * Align buffer with commitlog segment size (CASSANDRA-19471)
 * Ensure SAI indexes empty byte buffers for types that allow them as a valid input (CASSANDRA-19461)
 * Deprecate Python 3.7 and earlier, but allow cqlsh to run with Python 3.6-3.11 (CASSANDRA-19467)
 * Set uuid_sstable_identifiers_enabled to true in cassandra-latest.yaml (CASSANDRA-19460)
 * Revert switching to approxTime in Dispatcher (CASSANDRA-19454)
 * Add an optimized default configuration to tests and make it available for new users (CASSANDRA-18753)
 * Fix remote JMX under Java17 (CASSANDRA-19453)